--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/piyush.jpg" alt="Image"/></a></div>
           <div class="h2 title">Piyush Dahle</div>
-          <p class="category text-white">Front End Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="Piyush-Resume.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Resume</a>
+          <p class="category text-white">Front End Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="Piyush-Dahle.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Resume</a>
         </div>
       </div>
       <div class="section">
