--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Rajeev Nagar Bhoapl M.P.</div>
+              <div class="col-sm-8">Bhoapl M.P. India</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
