Updates in UI and Some Contents

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
     <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/main.css?ver=1.1.0" rel="stylesheet">
+    <link rel="stylesheet" href="./css/aos.css">
     <noscript>
       <style type="text/css">
         [data-aos] {
@@ -48,7 +48,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/piyush.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img class="piyush" src="images/piyush.jpg" alt="Image"/></a></div>
           <div class="h2 title">Piyush Dahle</div>
           <p class="category text-white">Front End Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="Piyush-Dahle.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Resume</a>
         </div>
@@ -105,7 +105,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Bhoapl M.P. India</div>
+              <div class="col-sm-8">Indrapuri Bhoapl M.P. India</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -196,14 +196,14 @@
                   <figure class="cc-effect"><img src="images/project-1.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">College Website</div>
-                      <p>Web Development</p>
+                      <p> A university-based website built with React.js, HTML, CSS, and JavaScript, focusing on an intuitive design for students and faculty, ensuring accessibility and user engagement.</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://newmegnumcafe.netlify.app">
                   <figure class="cc-effect"><img src="images/project-2.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Cafe Website</div>
-                      <p>Web Development</p>
+                      <p> A restaurant website featuring a dynamic UI with animations using GSAP, built with HTML, CSS, and JavaScript. The design was enhanced using Canva for branding and visuals.</p>
                     </figcaption>
                   </figure></a></div>
             </div>
@@ -212,14 +212,14 @@
                   <figure class="cc-effect"><img src="images/project-3.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Phone Book </div>
-                      <p>Web Development</p>
+                      <p>A web-based application built using HTML, CSS, Bootstrap, and JS, designed to manage contact details. This project leverages DOM manipulation for dynamic updates and implements CRUD operations, allowing users to add, edit, and remove contacts seamlessly.</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://672ca1ed8b1cf7623e063151--dahleproperty.netlify.app/">
                   <figure class="cc-effect"><img src="images/project-4.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Property Website</div>
-                      <p>Web Development</p>
+                      <p>A real estate website designed with HTML, CSS, JavaScript, and GSAP to enhance interactivity and animations, offering an engaging user experience for property listings.</p>
                     </figcaption>
                   </figure></a></div>
             </div>
@@ -323,69 +323,6 @@
     </div>
   </div>
 </div>
-<div class="section">
-  <div class="container cc-education">
-    <div class="h4 text-center mb-4 title">Education</div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
-            <p>2023 - 2025</p>
-            <div class="h5">Master Degree</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">TIT College Bhopal M.P.</div>
-            <br>
-            <p class="category">Degree : Master of Technology </p>
-            <p class="category">Branch: Computer Science & Engineering</p>
-            <!-- <p class="category">CGPA : 7.8/10</p> -->
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
-            <p>2019 - 2023</p>
-            <div class="h5">Bachelor Degree</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Barkatullah University Institude Of technology Bhopal M.P.</div>
-            <br>
-            <p class="category">Degree :Bachelor of Engineering </p>
-            <p class="category">Branch: Computer Science & Engineering</p>
-            <!-- <p class="category">CGPA : 7.79/10</p> -->
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
-            <p>2018 - 2019</p>
-            <div class="h5">Higher Secondary</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Balaghat Public School Balaghat M.P.</div>
-            <br>
-            <p class="category">Class : 12th</p>
-            <p class="category">Stream : Mathematics</p>
-            <!-- <p class="category">Percentage : 62%</p> -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
     <div class="container">
@@ -438,7 +375,7 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">Rajeev Nagar Bhoapl M.P.</p>
+                    <p class="pb-2">Indrapuri Bhoapl M.P.</p>
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">7987125247</p>
                     <p class="mb-0"><strong>Email</strong></p>
