using web3forms API

--- a/index.html
+++ b/index.html
@@ -334,7 +334,10 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/your@email.com" method="POST">
+                    <form action="https://api.web3forms.com/submit" method="POST">
+
+                      <input type="hidden" name="access_key" value="47a9d39c-59e3-428b-8fd5-d78d1aacb54c">
+
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
