--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
       </div>
       <div class="h4 title text-center">Piyush Dahle</div>
       <div class="text-center text-muted">
-        <p>&copy;Portfolio 2024<br>Resume Website</p>
+        <p class="myname">Create with ❤️ by Piyush Dahle </p>
       </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
