--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <i class="fa fa-linkedin fa-2x " aria-hidden="true"></i>
         </a>
       </div>
-      <div class="h4 title text-center">Piyush Dahle</div>
+      <div class="text-center font-look"><p>Thank you for visiting my portfolio website. I appreciate your time and interest in my work.</p></div>
       <div class="text-center text-muted">
         <p class="myname">Create with ❤️ by Piyush Dahle </p>
       </div>
