--- a/index.html
+++ b/index.html
@@ -324,7 +324,8 @@
   </div>
 </div>
 <div class="section" id="contact">
-  <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
+  <div class="cc-contact-information" style="background: rgb(99,45,133);
+background: radial-gradient(circle, rgba(99,45,133,1) 0%, rgba(148,53,211,1) 26%, rgba(188,114,235,1) 50%, rgba(149,65,204,1) 82%, rgba(125,63,164,1) 100%);">
     <div class="container">
       <div class="cc-contact">
         <div class="row">
