doing some changes in internship section

--- a/index.html
+++ b/index.html
@@ -268,39 +268,25 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Training and Internship</div>
+
+    
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>April 2024- Prestent</p>
-            <div class="h5">Sheryians Coding School</div>
+            <p>March 2025 - Present</p>
+            <div class="h5">Abhiyantriki Technology</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">MERN Stack Development Training</div>
-            <p> 
-              I’m currently a student at Sheryians Coding School, where I’m diving deep into MERN Stack development. This training covers the entire stack: MongoDB, Express.js, React.js, and Node.js, giving me a solid foundation in full-stack web development. Beyond the basics, I’m also learning advanced tools like Next.js and TypeScript, which help in building scalable applications. Additionally, I'm exploring animation techniques with GSAP, bringing dynamic and engaging elements to my projects. The program includes daily coding challenges and weekly projects, allowing me to apply my knowledge in real-world scenarios and grow as a developer.<a href="https://www.linkedin.com/posts/piyush-dahle-30b68a196_prepinsta-nanodegree-cpp-activity-7047574516151033856-PHek?utm_source=share&utm_medium=member_desktop" target="_blank"> Certificate</a></p>
+            <div class="h5">UI Developer Intern</div>
+            <p>During my internship as a UI Developer Intern at Abhiyantriki Technology Private Ltd., I was responsible for designing and developing professional, responsive websites from scratch. My role involved translating UI/UX designs into clean, efficient code using HTML, CSS, JavaScript, jQuery, and Bootstrap, while integrating AJAX for dynamic content updates without page reloads. I collaborated closely with the design and development teams to ensure visually appealing and user-friendly interfaces, enhancing both functionality and performance.</p>
           </div>
         </div>
       </div>
     </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
-            <p>March 2023 - April 2023</p>
-            <div class="h5">BHARAT INTERN</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Front End Development Internship</div>
-            <p>Bharat Intern brings you an opportunity full of knowledge-packed industry-based real-time projects. Learn from scratch and earn at the same time. Its offer internship opportunities on completing our courses to help you gain real-world experience under an assured mentor.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+   
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -311,7 +297,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">MERN Stack Developer Internship</div>
+            <div class="h5">Frontend Developer Intern</div>
             <p>CODEVERTEX is a vibrant and diverse community that brings together
               individuals with similar objectives and ultimate goals. Our main focus
               is on creating opportunities that span various areas, including
@@ -321,6 +307,26 @@
         </div>
       </div>
     </div>
+
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>April 2024 - March 2025</p>
+            <div class="h5">Sheryians Coding School</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">MERN Stack Development Training</div>
+            <p> 
+              I’m currently a student at Sheryians Coding School, where I’m diving deep into MERN Stack development. This training covers the entire stack: MongoDB, Express.js, React.js, and Node.js, giving me a solid foundation in full-stack web development. Beyond the basics, I’m also learning advanced tools like Next.js and TypeScript, which help in building scalable applications. Additionally, I'm exploring animation techniques with GSAP, bringing dynamic and engaging elements to my projects. The program includes daily coding challenges and weekly projects, allowing me to apply my knowledge in real-world scenarios and grow as a developer.            
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
 <div class="section" id="contact">
